src/test/ui/issue-43196.stderr
error: expected `|`, found `}`
  --> $DIR/issue-43196.rs:13:1
   |
LL |     |
   |      - expected `|` here
LL | }
   | ^ unexpected token

error: expected item, found `|`
  --> $DIR/issue-43196.rs:15:1
   |
LL | |
   | ^ expected item

error: aborting due to 2 previous errors

